Fix issue with overlapping styles.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,6 +16,7 @@
 }
 
 h1 {
+  font-weight: 500;
   font-size: 26px;
   margin: 5px;
 }
